2007-11-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/defaults.xml: Default collector-timeoffset-step increased
	from 30 to 60 seconds. 30 seconds is too short for too many
	installations.

2007-11-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	New selector action: RemoveInterface

2007-09-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/JunOS.pm: Dramatic update by Jon Nistor

2007-08-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Symmetricom.pm:
	New discovery module for Symmetricom NTP clock (Jon Nistor)

2007-08-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm:
	Removed BGP Advertized prefixes
	Added the prefix limits to Accepted prefixes
	

2007-08-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Torrus release 1.0.6

2007-07-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm: removed "reptoken" and
	optimized the snmp arguments

2007-06-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/collector.in: Now multiple collector instances can run
	in a single tree. Need to recompile all trees and re-start the
	daemons. A new copy of init.d/torrus should be copied
	in startup scripts directory. Also execute for every tree:
	torrus si --tree=TREE --clear
	

2007-06-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: Perl 5.8.8 is required for threads

2007-06-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/genreport.in: New option: --all2tree

	* perllib/Torrus/DevDiscover/Alteon.pm: New discovery module

2007-06-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Cisco CAR statistics

2007-05-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
